--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -7188,7 +7188,7 @@ meta.foundation-mq {
   max-width: 600px;
   margin: 0 auto;
   background: #fb5000;
-  background-image: url(../images/fa-bg-pattern.png); }
+  background-image: url(../../images/fa-bg-pattern.png); }
 
 .fa-icon {
   width: 50%;
@@ -7196,7 +7196,7 @@ meta.foundation-mq {
   display: inline-block;
   position: absolute;
   top: -0.1em;
-  background-image: url(../images/fa-like-icon.png);
+  background-image: url(../../images/fa-like-icon.png);
   background-repeat: no-repeat;
   background-origin: border-box; }
 
@@ -7213,14 +7213,14 @@ meta.foundation-mq {
 .fa-slide-up.ng-enter.ng-enter-active, .ng-enter.ng-enter-active.fa-edit-panel, .fa-slide-up.ng-hide-remove.ng-hide-remove-active, .ng-hide-remove.ng-hide-remove-active.fa-edit-panel {
   transform: translateX(0) translateY(0); }
 
-.fa-slide-down.ng-leave, .ng-leave.fa-edit-panel, .fa-slide-down.ng-hide-add, .ng-hide-add.fa-edit-panel {
+.fa-slide-down.ng-leave, .fa-slide-down.ng-hide-add {
   transition-duration: 0.8s;
   transition-timing-function: ease-in;
   transition-delay: 0;
   transition-property: transform, opacity;
   backface-visibility: hidden;
   transform: translateX(0) translateY(0); }
-.fa-slide-down.ng-leave.ng-leave-active, .ng-leave.ng-leave-active.fa-edit-panel, .fa-slide-down.ng-hide-add.ng-hide-add-active, .ng-hide-add.ng-hide-add-active.fa-edit-panel {
+.fa-slide-down.ng-leave.ng-leave-active, .fa-slide-down.ng-hide-add.ng-hide-add-active {
   transform: translateY(100%); }
 
 .fa-header {
@@ -7316,36 +7316,42 @@ meta.foundation-mq {
   overflow: hidden;
   backface-visibility: hidden;
   flex: 1 1 auto;
-  flex-flow: row wrap;
-  flex-wrap: wrap;
-  align-items: flex-start;
+  flex-flow: column nowrap;
+  align-items: stretch;
+  flex-wrap: nowrap;
+  align-items: stretch;
   justify-content: center;
   order: 0;
-  overflow-y: auto;
+  overflow-x: auto;
   -webkit-overflow-scrolling: touch;
   -ms-overflow-style: -ms-autohiding-scrollbar;
-  min-height: 580px; }
+  min-height: 580px;
+  position: relative; }
+
+.fa-intro {
+  margin-top: 20px; }
+  .fa-intro p {
+    text-align: center;
+    color: #fff;
+    font-size: 1.2rem;
+    line-height: 1; }
+
+.fa-card-wrap {
+  max-width: 70%;
+  margin: 0 auto; }
 
 .fa-card {
-  display: block;
-  margin:auto;
-  padding: 0 1rem;
-  overflow-y: auto;
-  -webkit-overflow-scrolling: touch;
-  -ms-overflow-style: -ms-autohiding-scrollbar;
-  flex: 0 0 66.66667%;
-  max-width: 66.66667%;
   min-height: 350px;
   border: 15px solid #fff;
   background-color: #fff;
   border-radius: 4px;
-  margin-top: 100px;
-  background-image: url(../../images/img-bg.png); }
+  margin: 100px auto 0;
+  background-image: url(../../images/img-bg.png);
+  background-size: cover; }
 
 .fa-card-nav-area {
   display: flex;
   height: auto;
-  margin:auto;
   position: relative;
   overflow: hidden;
   backface-visibility: hidden;
@@ -7359,32 +7365,17 @@ meta.foundation-mq {
   overflow-y: auto;
   -webkit-overflow-scrolling: touch;
   -ms-overflow-style: -ms-autohiding-scrollbar;
-  margin-top: 30px;
-  margin-bottom: 30px; }
+  margin: 30px auto; }
 
-.fa-card-nav-prev {
-  display: block;
-  padding: 0 1rem;
-  overflow-y: auto;
-  -webkit-overflow-scrolling: touch;
-  -ms-overflow-style: -ms-autohiding-scrollbar;
-  flex: 0 0 25%;
-  max-width: 25%; }
-  .fa-card-nav-prev img {
-    height: 40px; }
+.fa-card-nav-prev img {
+  height: 40px; }
 
-.fa-card-nav-next {
-  display: block;
-  padding: 0 1rem;
-  overflow-y: auto;
-  -webkit-overflow-scrolling: touch;
-  -ms-overflow-style: -ms-autohiding-scrollbar;
-  flex: 0 0 25%;
-  max-width: 25%;
-  margin-left: 50%; }
-  .fa-card-nav-next img {
-    height: 40px;
-    float: right; }
+.fa-card-nav-count {
+  color: #fff; }
+
+.fa-card-nav-next img {
+  height: 40px;
+  float: right; }
 
 label {
   color: #b0b0b0;
@@ -7392,40 +7383,19 @@ label {
   font-weight: bold; }
 
 .fa-edit-panel {
-  /*position: absolute !important;*/
   z-index: 1000;
-  display: flex;
-  height: auto;
-  position: relative;
-  overflow: hidden;
-  backface-visibility: hidden;
-  flex: 1 1 auto;
-  flex-flow: row wrap;
-  flex-wrap: nowrap;
-  align-items: stretch;
-  justify-content: flex-start;
-  order: 0;
-  overflow-y: auto;
-  -webkit-overflow-scrolling: touch;
-  -ms-overflow-style: -ms-autohiding-scrollbar;
-  flex-flow: column nowrap;
-  align-items: stretch;
-  min-height: 300px;
+  top: 0;
+  min-height: 600px;
+  margin: 0 auto;
   background-color: #fafafa;
   padding-bottom: 30px;
   padding-top: 60px; }
 
 .fa-edit-options {
-  max-width: 80%;
-  margin: 0 auto; }
+  margin: 0 auto;
+  width: 90%; }
 
 .fa-editable-msg {
-  display: block;
-  padding: 0 1rem;
-  overflow-y: auto;
-  -webkit-overflow-scrolling: touch;
-  -ms-overflow-style: -ms-autohiding-scrollbar;
-  flex: 1 1 auto;
   background: whitesmoke;
   background: repeating-linear-gradient(#fff, #fff 29px, #d9eaf3 29px, #d9eaf3 30px, #fff 30px);
   max-width: 400px;
@@ -7538,7 +7508,7 @@ label {
   width: 100%;
   margin-left: 0;
   margin-right: 0;
-  background-image: url(../images/fa-edit-icon.png);
+  background-image: url(../../images/fa-edit-icon.png);
   background-repeat: no-repeat;
   background-size: 26px;
   background-position: 15px 50%; }
@@ -7566,7 +7536,7 @@ label {
     margin-top: -2px; }
 
 .fa-edit-btn:hover {
-  background-image: url(../images/fa-edit-icon.png);
+  background-image: url(../../images/fa-edit-icon.png);
   background-repeat: no-repeat;
   background-size: 30px;
   background-position: 15px 50%; }
