--- a/app/develop/scss/main.scss
+++ b/app/develop/scss/main.scss
@@ -274,7 +274,8 @@ label{
 
 .fa-edit-panel{
 
-    // position: absolute!important; Olushola Edit
+
+   position: absolute!important;
 
     z-index: 1000;
     top:0;
