--- a/app/develop/scss/main.scss
+++ b/app/develop/scss/main.scss
@@ -64,6 +64,10 @@ $foundation-version: '1.2.0';
 //---------------------------------------------------APP CSS
 //__________________________________________________________
 
+body{
+    font-family: "Arimo"
+}
+
 
 .fa-app-wrapper{
   width: 100%;
@@ -77,7 +81,7 @@ $foundation-version: '1.2.0';
 //    min-height: 450px;
     margin: 0 auto;
     background: $secondary-color;
-    background-image: url(../../images/fa-bg-pattern.png);
+    background-image: url(../images/fa-bg-pattern.png);
 }
 
 .fa-icon{
@@ -87,7 +91,7 @@ $foundation-version: '1.2.0';
     position: absolute;
 //    float: left;
     top:-0.1em;
-    background-image: url(../../images/fa-like-icon.png);
+    background-image: url(../images/fa-like-icon.png);
     background-repeat: no-repeat;
     background-origin: border-box;
 }
@@ -197,10 +201,18 @@ $foundation-version: '1.2.0';
 ////        $align:center
 //        );
     margin-top: 20px;
-    p{
+    h3{
+        font-family: 'Delius Swash Caps', cursive;
         text-align: center;
         color: #fff;
-        font-size: 1.2rem;
+        font-size: 1.6rem;
+        line-height: 1;
+    }
+    h5{
+        font-family: 'Delius Swash Caps', cursive;
+        text-align: center;
+        color: #fff;
+        font-size: 1.1rem;
         line-height: 1;
     }
 }
@@ -222,7 +234,7 @@ $foundation-version: '1.2.0';
     background-color: #fff;
     border-radius: $global-radius;
     // margin-top: 100px; Olushola Edit
-    margin:100px auto 0;
+    margin:20px auto 0;
     background-image: url(../../images/img-bg.png);
     background-size: cover;
 }
@@ -232,6 +244,8 @@ $foundation-version: '1.2.0';
     @include grid-block(
         $size:8
         );
+    align-items: center;
+    justify-content: space-between;
     // margin-top:30px;
     // margin-bottom: 30px; Olushola Edit.
     margin:30px auto;
@@ -255,7 +269,7 @@ $foundation-version: '1.2.0';
 
 .fa-card-nav-next{
 //    @include grid-content(
-//        $size:3
+//        $size:3,
 //        $offset:6
 //    );
     img{
@@ -400,7 +414,7 @@ label{
         $expand:true
     );
     @extend .fa-btn-icon;
-    background-image: url(../../images/fa-edit-icon.png);
+    background-image: url(../images/fa-edit-icon.png);
     background-repeat: no-repeat;
 //    background-origin: border-box;
     background-size: 26px;
@@ -408,7 +422,7 @@ label{
 }
 
 .fa-edit-btn:hover{
-    background-image: url(../../images/fa-edit-icon.png);
+    background-image: url(../images/fa-edit-icon.png);
     background-repeat: no-repeat;
 //    background-origin: border-box;
     background-size: 30px;
@@ -441,7 +455,7 @@ label{
         $expand:true
     );
     @extend .fa-btn-icon;
-    background-image: url(../../images/fa-friends-icon.png);
+    background-image: url(../images/fa-friends-icon.png);
     background-repeat: no-repeat;
 //    background-origin: border-box;
     background-size: 26px;
@@ -449,7 +463,7 @@ label{
 }
 
 .fa-share-btn:hover{
-    background-image: url(../../images/fa-friends-icon.png);
+    background-image: url(../images/fa-friends-icon.png);
     background-repeat: no-repeat;
 //    background-origin: border-box;
     background-size: 30px;
