--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -7164,6 +7164,9 @@ meta.foundation-mq {
 .long-delay {
   animation-delay: 700ms !important; }
 
+body {
+  font-family: "Arimo"; }
+
 .fa-app-wrapper {
   width: 100%;
   height: 100%; }
@@ -7188,7 +7191,7 @@ meta.foundation-mq {
   max-width: 600px;
   margin: 0 auto;
   background: #fb5000;
-  background-image: url(../../images/fa-bg-pattern.png); }
+  background-image: url(../images/fa-bg-pattern.png); }
 
 .fa-icon {
   width: 50%;
@@ -7196,7 +7199,7 @@ meta.foundation-mq {
   display: inline-block;
   position: absolute;
   top: -0.1em;
-  background-image: url(../../images/fa-like-icon.png);
+  background-image: url(../images/fa-like-icon.png);
   background-repeat: no-repeat;
   background-origin: border-box; }
 
@@ -7330,10 +7333,17 @@ meta.foundation-mq {
 
 .fa-intro {
   margin-top: 20px; }
-  .fa-intro p {
+  .fa-intro h3 {
+    font-family: 'Delius Swash Caps', cursive;
     text-align: center;
     color: #fff;
-    font-size: 1.2rem;
+    font-size: 1.6rem;
+    line-height: 1; }
+  .fa-intro h5 {
+    font-family: 'Delius Swash Caps', cursive;
+    text-align: center;
+    color: #fff;
+    font-size: 1.1rem;
     line-height: 1; }
 
 .fa-card-wrap {
@@ -7345,7 +7355,7 @@ meta.foundation-mq {
   border: 15px solid #fff;
   background-color: #fff;
   border-radius: 4px;
-  margin: 100px auto 0;
+  margin: 20px auto 0;
   background-image: url(../../images/img-bg.png);
   background-size: cover; }
 
@@ -7365,6 +7375,8 @@ meta.foundation-mq {
   overflow-y: auto;
   -webkit-overflow-scrolling: touch;
   -ms-overflow-style: -ms-autohiding-scrollbar;
+  align-items: center;
+  justify-content: space-between;
   margin: 30px auto; }
 
 .fa-card-nav-prev img {
@@ -7508,7 +7520,7 @@ label {
   width: 100%;
   margin-left: 0;
   margin-right: 0;
-  background-image: url(../../images/fa-edit-icon.png);
+  background-image: url(../images/fa-edit-icon.png);
   background-repeat: no-repeat;
   background-size: 26px;
   background-position: 15px 50%; }
@@ -7536,7 +7548,7 @@ label {
     margin-top: -2px; }
 
 .fa-edit-btn:hover {
-  background-image: url(../../images/fa-edit-icon.png);
+  background-image: url(../images/fa-edit-icon.png);
   background-repeat: no-repeat;
   background-size: 30px;
   background-position: 15px 50%; }
@@ -7576,7 +7588,7 @@ label {
   width: 100%;
   margin-left: 0;
   margin-right: 0;
-  background-image: url(../../images/fa-friends-icon.png);
+  background-image: url(../images/fa-friends-icon.png);
   background-repeat: no-repeat;
   background-size: 26px;
   background-position: 15px 50%; }
@@ -7597,7 +7609,7 @@ label {
     margin-top: -2px; }
 
 .fa-share-btn:hover {
-  background-image: url(../../images/fa-friends-icon.png);
+  background-image: url(../images/fa-friends-icon.png);
   background-repeat: no-repeat;
   background-size: 30px;
   background-position: 15px 50%; }
