--- a/app/views/main.html
+++ b/app/views/main.html
@@ -22,8 +22,8 @@
             <div class="fa-card-wrap" id="select-card-image" ng-show="appflow=='select_picture'">
 
             <div class="fa-intro">
-              <p>Create a card for a special friend<br>
-              Start by picking an image below</p>
+              <h3 class>Create a Card for a Special Friend</h3>
+              <h5>Start by picking an image below</h5>
             </div>
                 <div class="fa-card" style="text-align:center; background-image:url(images/img-bg.png)">
                     <img id="card_img" ng-src="images/{{mainurl}}">
